# tutorials

./: CLAUDE.md  README.md  index.html  main-85195400c2815cd11fc0.js  main-loader.js  main.css  vendors-85195400c2815cd11fc0.js
a2a-examples/a2a-agent-client-example/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
a2a-examples/a2a-agent-client-example/src/: agent.ts  client.ts
agent-widget/: package.json
agent-widget/src/react/: agent.scss  agent.tsx
ap2-demo/: __main__.py  payments_agent_executor.py  pyproject.toml  test_client.py
async-logger/: .env.example  README.md  package.json
async-logger/src/: agent.ts  utils.ts
catalog/003-Login with Sequence/: .env.example  next.config.js  package.json
catalog/003-Login with Sequence/src/: ChainConfig.ts  login.tsx
catalog/003-Login with Sequence/src/pages/: _app.tsx
financial-agent/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  package-lock.json  package.json
financial-agent-py/: .env.example  .gitignore  README.md  requirements.txt
financial-agent-py/agent/: index_nevermined.py  index_unprotected.py
financial-agent-py/client/: index_nevermined.py  index_unprotected.py
financial-agent/agent/: index_nevermined.ts  index_unprotected.ts
financial-agent/client/: index_nevermined.ts  index_unprotected.ts
http-simple-agent/: .env.example  README.md  package.json
http-simple-agent-py/: .env.example  .gitignore  README.md  pyproject.toml
http-simple-agent-py/src/: __init__.py  agent.py  agent_observability.py  client.py
http-simple-agent-ts/: README.md  package.json
http-simple-agent-ts/src/: agent.ts  client.ts
http-simple-agent/src/: agent-observability.ts
langchain-chat-ui-nvm/: .env.example  LICENSE  README.md  package.json  pnpm-lock.yaml
langchain-chat-ui-nvm/src/app/: layout.tsx  page.tsx
langchain-chat-ui-nvm/src/app/x402-callback/: page.tsx
langchain-chat-ui-nvm/src/components/thread/: index.tsx  payment-banner.tsx
langchain-chat-ui-nvm/src/hooks/: useNvmPayment.tsx
langchain-chat-ui-nvm/src/lib/: env-server.ts  x402-client.ts  x402-server.ts
langchain-langsmith-deployment-py/: .env.example  README.md  langgraph.json  pyproject.toml
langchain-langsmith-deployment-py/src/: agent.py  buyer.py  nvm_app.py
langchain-paid-agent-py/: .env.example  .gitignore  README.md  pyproject.toml
langchain-paid-agent-py/src/: agent.py  buyer.py
langchain-research-agent-py/: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
langchain-research-agent-py/src/: agent.py  buyer.py
manual-logger/: package.json
manual-logger/src/: agent.ts
mcp-examples/weather-mcp/: .env.example  CLAUDE.md  COMPARISON_REPORT.md  Dockerfile  README.md  RUN.md  package-lock.json  package.json
mcp-examples/weather-mcp-py/: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  README_SIMPLIFIED_API.md  SETUP_LOCAL_PAYMENTS.md  pyproject.toml  run_simplified.sh  setup_local.sh
mcp-examples/weather-mcp-py/src/: __init__.py  main.py  server.py
mcp-examples/weather-mcp-py/src/services/: __init__.py  weather_service.py
mcp-examples/weather-mcp/docs/: BLOG_POST_ANALYSIS.md  BLOG_POST_MCP_AUTHORIZATION.md  CREDITS_CONTEXT_EXAMPLE.md  ICONS_BREAKDOWN.md  ICONS_PROMPTS.md  ICONS_VERIFICATION.md  NEVERMINED_MCP_IMPLEMENTATION_POINTS.md  PRESENTATION_POINTS_NON_TECHNICAL.md  TUTORIAL_VIDEO_NARRATION_EN.txt  TUTORIAL_VIDEO_SCRIPT.md  protecting-mcp-with-nevermined-payments.md
mcp-examples/weather-mcp/src/: app.ts  client-demo.ts  client-low-level.ts  main.ts
mcp-examples/weather-mcp/src/config/: environment.ts  server-config.ts
mcp-examples/weather-mcp/src/server/: main.ts  main_original_mcp.ts
medical-agent/: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json
medical-agent/agent/: index_nevermined.ts  index_unprotected.ts
medical-agent/client/: index_nevermined.ts  index_unprotected.ts
organizations-example/: .cta.json  README.md  index.html  package.json
organizations-example/src/: App.tsx
organizations-example/src/components/: AgentsTable.tsx  CreateAgentForm.tsx  StripeConnectionModal.tsx  UserDropdown.tsx
organizations-example/src/components/ui/: dialog.tsx
organizations-example/src/config/: environment.ts
organizations-example/src/services/: nevermined-api.ts  storage.ts
organizations-example/src/types/: api.ts
payments-nextjs-example/: package.json
payments-nextjs-example/app/: page.tsx
pricing-simulation/: .env.example  README.md  package.json
pricing-simulation-py/: README.md  requirements.txt  run_agent.py
pricing-simulation-py/src/: __init__.py  agent.py  utils.py
pricing-simulation/src/: agent.ts
sdk/002-nvmApp/: .env.local.example  README.md  next.config.js  package.json
sdk/002-nvmApp/.codesandbox/: tasks.json
sdk/002-nvmApp/src/: config.ts
sdk/002-nvmApp/src/layout/: Providers.tsx
sdk/002-nvmApp/src/pages/: index.tsx  queries.tsx
subscriptions/001-Smart_Contract_Access/: package-lock.json  package.json
subscriptions/002-Web_Access/: package-lock.json  package.json
web-search-paid-api-ts/: .env.example  .gitignore  README.md  package.json
web-search-paid-api-ts/src/: client.ts  search.ts  server.ts  store.ts
web-search-paid-api-ts/src/llms-txt-template/: llms.txt  nevermined.md
(+74 files in other folders)
